Fix credit cost applying issue